--- a/home1.html
+++ b/home1.html
@@ -24,9 +24,9 @@
   <body style="background-color: #f8f9fa" class="content-container">
     <div
       style="position: sticky; top: 0; background-color: black; z-index: 1"
-      class="content-center w-[100%] lg:content-center w-[100%] sm:w-fill grid grid-col-1"
+      class="content-center w-[100%] lg:content-center w-[100%] sm:w-fill grid grid-col-1 sm:bg-white"
     >
-      <nav class="flex px-12 bg-white sm:flex w-full lg:w-full mx-0">
+      <nav class="flex px-4 bg-white sm:flex w-full lg:w-full mx-0">
         <a href="#"> <img src="./images/Logo.svg" class="mt-6 w-[171px]" /></a>
         <div class="sm:flex w-full">
           <ul
@@ -34,7 +34,7 @@
           >
             <ul class="lg:flex sm;flex w-full">
               <li
-                class="flex rounded-full border-2 lg:w-96 h-12 mt-4 ml-auto mr-auto sm:w-40"
+                class="flex rounded-full border-2 lg:w-96 h-12 mt-4 ml-auto mr-auto sm:w-32"
                 style="background-color: white; border-color: #dee2e6"
               >
                 <input
