--- a/home1.html
+++ b/home1.html
@@ -21,12 +21,12 @@
       });
     </script>
   </head>
-  <body style="background-color: #f8f9fa" class="content-container">
+  <body style="background-color: #f8f9fa" class="w-full">
     <div
       style="position: sticky; top: 0; background-color: black; z-index: 1"
       class="content-center w-[100%] lg:content-center w-[100%] sm:w-fill grid grid-col-1 sm:bg-white"
     >
-      <nav class="flex px-4 bg-white sm:flex w-full lg:w-full mx-0">
+      <nav class="flex px-4 bg-white sm:flex w-full pb-4 lg:w-full mx-0">
         <a href="#"> <img src="./images/Logo.svg" class="mt-6 w-[171px]" /></a>
         <div class="sm:flex w-full">
           <ul
@@ -183,19 +183,14 @@
       </nav>
     </div>
 
-    <!--first banner---->
-    <div class="">
-      <div class="sm:flex-row lg: flex flex-col items-center bg-white">
-        <div class="ml-8 mt-auto mb-auto">
-          <p
-            style="font-family: inter; color: black"
-            class="font-bold text-4xl mb-4 mt-4 sm:mt-4"
-          >
+    <div class="bg-white">
+      <div class="sm:flex sm:flex lg:flex lg:flex items-center">
+        <div class="mx-4 lg:ml-8">
+          <p class="font-bold text-3xl md:text-4xl sm: text-left ml-6 mr-2">
             Everything Your Pet Desires, All in One Place.
           </p>
           <p
-            style="color: #212529"
-            class="font-family: inter font-normal text-xl leading-9"
+            class="text-lg md:text-xl leading-7 md:leading-9 text-left text-justify ml-6 mr-4"
           >
             Discover a world tailored for your pet: the ultimate hub for pet
             care essentials, from trusted stores to expert vets, grooming,
@@ -204,23 +199,23 @@
         </div>
         <img
           src="./images/container.svg"
-          class="w-fit lg:ml-48 mr-8 mt-16 mb-10"
+          class="w-1/2 ml-auto mr-auto pb-4 md:w-auto my-8 mx-4 lg:mx-8"
         />
       </div>
     </div>
 
-    <div class="w-fit lg:m-auto sm:w-fit pl-auto pr-auto content-center">
+    <div class="w-fit lg:m-auto sm:w-fit px-[32px] content-center">
       <div style="background-color: #f8f9fa; padding-top: 32px">
         <div class="pl-3"></div>
         <ul
-          class="sm:grid grid-col-1 lg:flex rounded mx-5 py-4"
+          class="sm:grid grid-col-2 lg:flex rounded mx-5 py-4"
           style="background-color: white"
         >
           <li>
             <img
               src="./images/Icon Box (00).svg"
               alt=""
-              class="pl-5 ml-16 mb-4"
+              class="pl-5 ml-16 mb-6"
             />
             <div>
               <a href=""
@@ -277,7 +272,7 @@
               <a href="">
                 <span
                   style="font-family: Inter"
-                  class="font-normal text-base leading-7 pl-5 ml-24"
+                  class="font-normal text-base leading-7 pl-5 ml-20"
                 >
                   Training
                 </span>
@@ -288,13 +283,13 @@
             <img
               src="./images/Icon Box (04).svg"
               alt=""
-              class="pl-5 ml-16 mb-6"
+              class="pl-5 ml-[64px] mb-6"
             />
             <div>
               <a href="">
                 <span
                   style="font-family: Inter"
-                  class="font-normal text-base leading-7 pl-5 ml-20"
+                  class="font-normal text-base leading-7 pl-2 ml-20"
                 >
                   Grooming
                 </span>
@@ -347,7 +342,7 @@
             <a href="#"
               ><p
                 style="font-family: inter; color: #6610f2"
-                class="font-semibold text-sm mt-2"
+                class="font-semibold text-sm mt-2 pl-8"
               >
                 View All
               </p></a
@@ -457,7 +452,7 @@
           <a href="#"
             ><p
               style="font-family: inter; color: #6610f2"
-              class="font-semibold text-sm mt-2"
+              class="font-semibold text-sm mt-2 ml-8"
             >
               View All
             </p></a
