--- a/home1.html
+++ b/home1.html
@@ -204,10 +204,10 @@
       </div>
     </div>
 
-    <div class="w-fit m-auto mx-0 content-center">
+    <div class="w-fit m-auto content-center">
       <div style="background-color: #f8f9fa; padding-top: 32px">
         <div class="bg-white lg:ml-16 sm:ml-0">
-          <ul class="px-4 py-4 flex flex-wrap justify-center">
+          <ul class="py-4 flex flex-wrap justify-center">
             <li class="w-1/2 sm: md:w-1/3 lg:full xl:w-1/4 mb-4">
               <img
                 src="./images/Icon Box (00).svg"
@@ -220,7 +220,7 @@
                 </a>
               </div>
             </li>
-            <li class="mb-4">
+            <li class="">
               <img
                 src="./images/Icon Box (01).svg"
                 alt=""
@@ -232,7 +232,7 @@
                 </a>
               </div>
             </li>
-            <li>
+            <li class="">
               <img
                 src="./images/Icon Box (02).svg"
                 alt=""
@@ -253,13 +253,13 @@
               <img
                 src="./images/Icon Box (03).svg"
                 alt=""
-                class="pl-5 ml-14 mb-4"
+                class="pl-5 ml-8 mb-4"
               />
               <div>
                 <a href="">
                   <span
                     style="font-family: Inter"
-                    class="font-normal text-base leading-7 pl-5 ml-20"
+                    class="font-normal text-base leading-7 pl-5 ml-16"
                   >
                     Training
                   </span>
@@ -287,13 +287,13 @@
               <img
                 src="./images/Icon Box (05).svg"
                 alt=""
-                class="pl-5 ml-16 mb-4"
+                class="pl-5 ml-12 mb-4"
               />
               <div>
                 <a href="">
                   <span
                     style="font-family: Inter"
-                    class="font-normal text-base leading-7 pl-1 ml-20"
+                    class="font-normal text-base leading-7 ml-16"
                   >
                     Buy & Sell
                   </span>
