--- a/home1.html
+++ b/home1.html
@@ -23,8 +23,14 @@
   </head>
   <body style="background-color: #f8f9fa" class="w-full">
     <div
-      style="position: sticky; top: 0; background-color: black; z-index: 1"
-      class="content-center w-[100%] lg:content-center w-[100%] sm:w-fill grid grid-col-1 sm:bg-white"
+      style="
+        position: sticky;
+        top: 0;
+
+        z-index: 1;
+        width: 100%;
+      "
+      class="content-center w-[100%] lg:content-center w-[100%] bg-color:black sm:w-fill grid grid-col-1 sm:bg-white"
     >
       <nav class="flex px-4 bg-white sm:flex w-full pb-4 pl-8 lg:w-full mx-0">
         <a href="#"> <img src="./images/Logo.svg" class="mt-5 w-[171px]" /></a>
@@ -184,7 +190,7 @@
     </div>
 
     <div class="bg-white">
-      <div class="sm:flex sm:flex lg:flex lg:flex items-center">
+      <div class="sm:flex sm:flex lg:flex lg:flex items-center m-auto">
         <div class="mx-8 lg:ml-8">
           <p class="font-bold text-3xl md:text-4xl sm: text-left ml-6 mr-2">
             Everything Your Pet Desires, All in One Place.
@@ -207,8 +213,8 @@
     <div class="w-fit m-auto content-center">
       <div style="background-color: #f8f9fa; padding-top: 32px">
         <div class="bg-white lg:ml-16 sm:ml-0">
-          <ul class="py-4 flex flex-wrap justify-center">
-            <li class="w-1/2 sm: md:w-1/3 lg:full xl:w-1/4 mb-4">
+          <ul class="py-4 flex flex-wrap justify-start">
+            <li class="w-1/2 sm: md:w-1/3 ml-6 lg:full xl:w-1/4 mb-4">
               <img
                 src="./images/Icon Box (00).svg"
                 alt=""
