--- a/home1.html
+++ b/home1.html
@@ -25,7 +25,7 @@
     <div class="block lg:hidden">
       <div
         style="
-          position: sticky;
+          position: fixed;
           top: 0;
 
           z-index: 1;
@@ -40,6 +40,7 @@
           <div class="sm:flex w-full">
             <ul class="lg:pr-0 md:w-full space-x-4 sm:grid grid-col-1 pr-16">
               <ul class="lg:flex sm:flex w-full content-center">
+                <div>
                 <li
                   class="flex rounded-full border-2 lg:w-96 h-12 mt-4 ml-auto mr-auto sm:w-32"
                   style="background-color: white; border-color: #dee2e6"
@@ -55,7 +56,7 @@
                     class="pr-1 w-12 h-[40px] pt-1"
                   />
                 </li>
-
+</div>
                 <li>
                   <button
                     style="
@@ -91,7 +92,7 @@
                 <div class="mx-0 w-full">
                   <ul
                     class="sm:grid grid-col-2 lg:flex py-3 mt-6 items-center justify-center"
-                    style="background-color: black; position: sticky"
+                    style="background-color: black;"
                   >
                     <li>
                       <a href="#">
@@ -193,7 +194,7 @@
     <div class="hidden lg:block">
       <div
         style="
-          position: sticky;
+          position: fixed;
           top: 0;
 
           z-index: 1;
@@ -260,7 +261,7 @@
               <div class="w-full">
                 <div class="mx-0 w-full">
                   <ul
-                    class="sm:grid grid-col-2 lg:flex py-3 mt-6 items-center justify-center"
+                    class="sm:grid grid-col-2 lg:flex py-3 mt-6 mb-4 items-center justify-center"
                     style="background-color: black; position: sticky"
                   >
                     <li>
@@ -344,9 +345,9 @@
     
 
     <div class="bg-white">
-      <div class="sm:flex sm:flex lg:flex lg:flex items-center m-auto">
+      <div class="sm:flex sm:flex lg:flex lg:flex items-center  m-auto">
         <div class="mx-8 lg:ml-8">
-          <p class="font-bold text-3xl md:text-4xl sm: text-left ml-6 mr-2">
+          <p class="font-bold text-3xl md:text-4xl sm: text-left ml-6 mr-2 mt-16">
             Everything Your Pet Desires, All in One Place.
           </p>
           <p
@@ -359,7 +360,7 @@
         </div>
         <img
           src="./images/container.svg"
-          class="w-1/2 ml-auto mr-auto pb-4 md:w-auto my-8 mx-4 lg:mx-8"
+          class="w-1/2 ml-auto mr-auto pb-4 md:w-auto my-8 mx-4  lg:mx-8"
         />
       </div>
     </div>
