--- a/home1.html
+++ b/home1.html
@@ -345,7 +345,7 @@
     
 
     <div class="bg-white">
-      <div class="sm:flex sm:flex lg:flex lg:flex items-center  m-auto">
+      <div class="sm:flex sm:flex lg:flex lg:flex items-center m-auto">
         <div class="mx-8 lg:ml-8">
           <p class="font-bold text-3xl md:text-4xl sm: text-left ml-6 mr-2 mt-16">
             Everything Your Pet Desires, All in One Place.
@@ -483,7 +483,7 @@
       </div>
       <div class="">
         <div
-          class="flex sm:grid grid-col-2 lg:flex ml-8 mr-16 mb-4 mt-8 justify-between"
+          class="flex sm:grid grid-col-2 lg:flex ml-8 mr-4 mb-4 mt-8 justify-between "
         >
           <p class="font-bold text-3xl" style="font-family: inter">
             Pet Stores
@@ -491,7 +491,7 @@
           <a href="#"
             ><p
               style="font-family: inter; color: #6610f2"
-              class="font-semibold text-sm mt-2 pl-8"
+              class="font-semibold text-sm mt-2 pl-8 sm:float-right "
             >
               View All
             </p></a
@@ -595,7 +595,7 @@
       </div>
 
       <div
-        class="flex w-full sm:grid grid-col-1 lg:flex pl-8 pr-16 mb-4 py-4 justify-between"
+        class="flex w-full sm:grid grid-col-1 lg:flex pl-8 pr-4 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">Products</p>
         <a href="#"
@@ -822,7 +822,7 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-16 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-4 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">Vets</p>
         <a href="#"
@@ -987,7 +987,7 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-16 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-4 pr-4 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">
           Training Services
@@ -1183,7 +1183,7 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-4 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-4 pr-0 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">
           Grooming Services
@@ -1367,7 +1367,7 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-16 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-4 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">Buy a Pet</p>
         <a href="#"
@@ -1594,7 +1594,7 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-16 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-4 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">
           Buyer Request
@@ -1822,7 +1822,7 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-20 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-8 pr-4 mb-4 py-4 justify-between"
       >
         <p class="font-bold text-3xl" style="font-family: inter">Adopt a Pet</p>
         <a href="#"
