--- a/home1.html
+++ b/home1.html
@@ -35,21 +35,21 @@
       >
         <nav class="flex px-4 bg-white sm:flex w-full pb-4 pl-8 lg:w-full mx-0">
           <a href="#">
-            <img src="./images/Logo.svg" class="mt-5 w-[171px]"
+            <img src="./images/Logo.svg" class="mt-5 w-[400px]  "
           /></a>
           <div class="sm:flex w-full">
             <ul class="lg:pr-0 md:w-full space-x-4 sm:grid grid-col-1 pr-16">
               <ul class="lg:flex sm:flex w-full content-center">
                 <div>
                 <li
-                  class="flex rounded-full border-2 lg:w-96 h-12 mt-4 ml-auto mr-auto sm:w-32"
+                  class="flex rounded-full border-2 lg:w-40 h-12 mt-4 ml-auto mr-auto sm: h-12 w-[15rem]"
                   style="background-color: white; border-color: #dee2e6"
                 >
                   <input
                     type="text"
                     id="mySearch"
                     placeholder="Search"
-                    class="rounded-full lg:w-96 pl-4 outline-none"
+                    class="rounded-full sm:w-72 pl-4 outline-none"
                   />
                   <img
                     src="./images/Icon Button (2).svg"
@@ -91,7 +91,7 @@
               <div class="w-full">
                 <div class="mx-0 w-full">
                   <ul
-                    class="sm:grid grid-col-2 lg:flex py-3 mt-6 items-center justify-center"
+                    class="sm:grid grid-col-2 lg:flex py-3  items-center justify-center"
                     style="background-color: black;"
                   >
                     <li>
@@ -1183,9 +1183,9 @@
       </div>
 
       <div
-        class="flex sm:grid grid-col-1 lg:flex pl-4 pr-0 mb-4 py-4 justify-between"
+        class="flex sm:grid grid-col-1 lg:flex pl-4 pr-4 mb-4 py-4 justify-between"
       >
-        <p class="font-bold text-3xl" style="font-family: inter">
+        <p class="font-bold text-3xl sm:font-bold text-xl" style="font-family: inter">
           Grooming Services
         </p>
         <a href="#"
