--- a/home1.html
+++ b/home1.html
@@ -348,9 +348,9 @@
         
       </div>
     
-
-    <div class="bg-white">
-      <div class="sm:flex sm:flex lg:flex lg:flex items-center m-auto">
+<div>
+    <div class="bg-white ">
+      <div class="sm:flex sm:flex lg:flex lg:flex items-center ml-auto mr-auto w-fit">
         <div class="mx-8 lg:ml-8">
           <p class="font-bold text-3xl md:text-4xl sm: text-left ml-6 mr-2 mt-[5rem]">
             Everything Your Pet Desires, All in One Place.
@@ -369,7 +369,7 @@
         />
       </div>
     </div>
-
+</div>
     <div class="w-fit m-auto content-center">
       <div style="background-color: #f8f9fa; padding-top: 32px">
         <div class="bg-white lg:ml-16 sm:ml-0">
